Changed: thing editor properties, states, sounds and flags are now tabbed to save on screen real estate. Especially useful if an engine has many thing properties.
Changed: WhackEd4 is now a 64 bit application.
Changed: moved preview availability warning to notification text inside the patch settings window.
Changed: scale UI and bitmap assets for high DPI displays.
Fixed: the state animation preview now displays action names instead of code pointers for non-extended patches.
Fixed: a weapon's FireCGun and FirePlasma actions would only mark the extra muzzle flash state as used if the action was used on the first fire state.
Fixed: loading non-extended patches that try to set a codepointer on a state that originally had none will now display a warning. Thanks to Zodomaniac.
Fixed: saving a yet unsaved patch while exiting caused a crash. Thanks to TheStupidestBeing.
Fixed: BEX strings that do not appear in the engine selected for a patch will now not be visible in the strings editor, but will remain in the saved patch.
Fixed: fixed a wrong next state value in the MBF tables for S_GRENADE (968). Thanks to hawkwind3.
Fixed: crash on startup in some rare cases where no patch was loaded yet. Thanks to Endy McGufin.
Fixed: maximum string length calculation for non-extended patches did not take the terminating NULL character into account. Thanks to Altazimuth.
Fixed: sprite frame selection up\down button did not work correctly.
Fixed: sound priority values can now be in the full signed integer range (though anything above 127 is useless).
Fixed: the MBF TRANSLATION2 flag is now available and will not be removed upon saving. Thanks to j0e.
Fixed: the MBF TRANSLATION1 flag is now recognized, and aliased to TRANSLATION for Boom compatibility. Thanks to hawkwind3.
Fixed: some typos in engine configuration files. Thanks to hawkwind3.
Fixed: Doom Retro TRANSLUCENT flag now shows up correctly in the flag list, alongside Boom's TRANSLUCENT.